All working and done, ready to hand over

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,13 @@
-idf_component_register(SRCS "coap_server_example_main.c"
-                    INCLUDE_DIRS "."
-                    EMBED_TXTFILES certs/coap_ca.pem certs/coap_server.crt certs/coap_server.key)
+
+
+
+idf_component_register(
+	SRCS # list the source files of this component
+	"coap_server_example_main.c"
+	"LocalLibraries/dht11.c"
+	
+	INCLUDE_DIRS
+	"."
+	"LocalLibraries"
+
+	EMBED_TXTFILES certs/coap_ca.pem certs/coap_server.crt certs/coap_server.key)
